--- a/stats.css
+++ b/stats.css
@@ -9,4 +9,33 @@
 body{
     font-family: 'Inter', sans-serif;
     font-family: 'Lexend Deca', sans-serif;
+    background-color: hsl(233, 47%, 7%);
+}
+
+#main{
+    position: relative;
+    background-color: hsl(244, 38%, 16%);
+    border: 1px solid red;
+    width: 100%;
+    height: 80vh;
+}
+
+h1{
+    font-size: 2rem;
+    color: hsl(0, 0%, 100%);
+    border: 1px solid rgb(103, 87, 87);
+    width: 30%;
+}
+
+.p-0{
+    border: 1px solid red;
+    width: 30%;
+    color: hsla(0, 0%, 100%, 0.75);
+}
+
+.img{
+    width: 35%;
+    position: absolute;
+    right: 0vw;
+    top: 0vw;
 }
