--- a/stats.css
+++ b/stats.css
@@ -14,27 +14,73 @@ body{
 
 #main{
     position: relative;
+    margin: 7.5% 0 0 10%;
     background-color: hsl(244, 38%, 16%);
-    border: 1px solid red;
-    width: 100%;
-    height: 80vh;
+    border-radius: 2vh;
+    width: 80%;
+    height: 68.4vh;
 }
 
 h1{
     font-size: 2rem;
     color: hsl(0, 0%, 100%);
-    border: 1px solid rgb(103, 87, 87);
-    width: 30%;
+    width: 45%;
+    border: 1px;
+    padding: 5% 6% 2% 6%;
+}
+
+.diff{
+    color: hsl(277, 64%, 61%);
 }
 
 .p-0{
-    border: 1px solid red;
-    width: 30%;
+    width: 50%;
     color: hsla(0, 0%, 100%, 0.75);
+    padding: 0 6% 5% 6%;
+    line-height: 4vh;
+}
+
+#sub-main{
+    width: 40%;
+}
+
+.sub-main1 p{
+    display: inline-block;
+    color: hsl(0, 0%, 100%);
+    font-size: 1.4rem;
+    font-weight: 700;
+    padding: 0 6% 3% 15%;
+}
+
+.sub-main2 .p1{
+    display: inline-block;
+    font-size: 0.8rem;
+    padding: 0 6% 0 15%;
+    color:hsla(0, 0%, 100%, 0.75);
+}
+
+.sub-main2 .p2{
+    display: inline-block;
+    font-size: 0.8rem;
+    padding: 0 0 0 10%;
+    color:hsla(0, 0%, 100%, 0.75);
+}
+
+.sub-main2 .p3{
+    display: inline-block;
+    font-size: 0.8rem;
+    padding: 0 0 0 15%;
+    color:hsla(0, 0%, 100%, 0.75);
+}
+
+#overlay{
+    background: hsl(277, 64%, 61%);
 }
 
 .img{
-    width: 35%;
+    border-bottom-right-radius: 2vh;
+    border-top-right-radius: 2vh;
+    width: 50%;
     position: absolute;
     right: 0vw;
     top: 0vw;
