--- a/stats.css
+++ b/stats.css
@@ -142,6 +142,7 @@ h1{
     }
 
     .image{
+        border-top-right-radius: 0;
         border-bottom-right-radius: 0;
         border-top-left-radius: 2vh;
         border-top-right-radius: 2vh;
@@ -157,9 +158,69 @@ h1{
 }
 
 @media (min-width: 375px) and (max-width: 424px){
-    .image{
+    body{
+        height: 140vh;
+    }
+
+    #main{
+        border-radius: 2vh;
+        width: 90%;
+        height: 135vh;
+        margin: 10% 4% 0 5%;
+    }
+
+    h1{
+        padding: 100% 0 6% 12%;
+        font-size: 1.5rem;
+        width: 88%;
+        text-align: center;
+    }
+
+    .p-0{
         width: 100%;
-        height: 60%;
+        text-align: center;
+        font-size: 0.89rem;
+    }
+
+    .sub-main1 p{
+        margin: 20% 0 0 90%;
+    }
+
+    .sub-main1 .p2{
+        margin: 20% 0 0 94%;
+    }
+
+    .sub-main2 .p1{
+        position: relative;
+        top: -22vh;
+        left: 29vw;
+    }
+
+    .sub-main2 .p2{
+        position: relative;
+        top: -15vh;
+        left: 31vw;
+    }
+
+    .sub-main2 .p3{
+        position: relative;
+        top: -8vh;
+        left: 31vw;
+    }
+
+    .image{
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        border-top-left-radius: 2vh;
+        border-top-right-radius: 2vh;
+        width: 100%;
+        height: 40%;
+    }
+
+    .overlay{
+        border-top-left-radius: 2vh;
+        border-top-right-radius: 2vh;
+        border-bottom-right-radius: 0;
     }
 }
 
