--- a/stats.css
+++ b/stats.css
@@ -14,6 +14,9 @@ body{
 }
 
 #main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     margin: 7.5% 0 0 10%;
     background-color: hsl(244, 38%, 16%);
@@ -25,9 +28,11 @@ body{
 h1{
     font-size: 2rem;
     color: hsl(0, 0%, 100%);
-    width: 45%;
-    border: 1px;
-    padding: 5% 6% 2% 6%;
+    width: 40%;
+    border: 1px solid red;
+    position: absolute;
+    top: 3rem;
+    left: 5rem;
 }
 
 .diff{
@@ -35,66 +40,42 @@ h1{
 }
 
 .p-0{
-    width: 50%;
-    color: hsla(0, 0%, 100%, 0.75);
-    padding: 0 6% 5% 6%;
-    line-height: 4vh;
-}
-
-#sub-main{
+    border: 1px solid red;
     width: 40%;
-}
-
-.sub-main1 p{
-    display: inline-block;
-    color: hsl(0, 0%, 100%);
-    font-size: 1.4rem;
-    font-weight: 700;
-    padding: 0 6% 3% 15%;
-}
-
-.sub-main2 .p1{
-    display: inline-block;
-    font-size: 0.8rem;
-    padding: 0 6% 0 15%;
-    color:hsla(0, 0%, 100%, 0.75);
-}
-
-.sub-main2 .p2{
-    display: inline-block;
-    font-size: 0.8rem;
-    padding: 0 0 0 10%;
-    color:hsla(0, 0%, 100%, 0.75);
-}
-
-.sub-main2 .p3{
-    display: inline-block;
-    font-size: 0.8rem;
-    padding: 0 0 0 15%;
-    color:hsla(0, 0%, 100%, 0.75);
-}
-
-.image{
-    width: 50%;
-    height: 100%;
-    background: url(Images/image-header-desktop.jpg);
-    background-repeat: none;
-    background-size: cover;
-    border-bottom-right-radius: 2vh;
-    border-top-right-radius: 2vh;
+    color: hsla(0, 0%, 100%, 0.75);
     position: absolute;
-    right: 0vw;
-    top: 0vw;
+    left: 5rem;
+    line-height: 1.5rem;
 }
 
-.overlay{
-    background-color:hsla(277, 64%, 61%, 0.45);
-    height: 100%;
-    border-top-right-radius: 2vh;
-    border-bottom-right-radius: 2vh;
+.sub-main1{
+    color: hsl(0, 0%, 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid red;
+    position: relative;
+    top: 10rem;
+    left: -22rem;
 }
 
-@media (min-width: 320px) and (max-width: 374px){
+.sub-main1 .p1{
+
+}
+
+.sub-main1 .p1{
+    border: 1px solid green;
+}
+
+.sub-main1 .p2{
+    border: 1px solid blue;
+}
+
+.sub-main1 .p3{
+    border: 1px solid gold;
+}
+
+/* @media (min-width: 320px) and (max-width: 374px){
     #main{
         border-radius: 2vh;
         width: 90%;
@@ -229,4 +210,4 @@ h1{
         width: 100%;
         height: 70%;
     }
-}
+} */
