--- a/stats.css
+++ b/stats.css
@@ -108,7 +108,7 @@ h1{
     height: 100%;
 }
 
- @media (min-width: 320px) and (max-width: 374px){
+ @media (max-width: 374px){
     #main{
         border-radius: 1rem;
         width: 90%;
@@ -119,8 +119,8 @@ h1{
     h1{
         font-size: 1.7rem;
         border: 1px solid red;
-        width: 90%;
-        left: 0.9rem;
+        width: 80%;
+        left: 1.8rem;
         text-align: center;
     }
 
