--- a/stats.css
+++ b/stats.css
@@ -108,7 +108,7 @@ h1{
     height: 100%;
 }
 
- @media (max-width: 500px){
+ @media (min-width: 320px) and (max-width: 374px){
     #main{
         border-radius: 1rem;
         width: 90%;
@@ -118,9 +118,8 @@ h1{
 
     h1{
         font-size: 1.7rem;
-        border: 1px solid red;
         width: 80%;
-        left: 2.3rem;
+        left: 2rem;
         text-align: center;
     }
 
