--- a/stats.css
+++ b/stats.css
@@ -91,6 +91,7 @@ h1{
 .image{
     background: url(Images/image-header-desktop.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
     width: 50%;
@@ -109,21 +110,74 @@ h1{
 }
 
  @media (min-width: 320px) and (max-width: 374px){
+    body{
+        height: 52rem;
+    }
+
     #main{
         border-radius: 1rem;
         width: 90%;
-        height: 130rem;
+        height: 50rem;
         margin: 10% 4% 0 5%;
     }
 
     h1{
         font-size: 1.7rem;
         width: 80%;
+        top: 17rem;
         left: 2rem;
         text-align: center;
     }
 
+    .p-0{
+        font-size: 0.9rem;
+        text-align: center;
+        width: 80%;
+        top: 25rem;
+        left: 2rem;
+    }
+
+    .sub-main1{
+        font-size: 1.3rem;
+        left: 3rem;
+        top: 10rem;
+    }
+
+    .sub-main1 .p2{
+        top: 5rem;
+        left: 0.5rem;
+    }
+
+    .sub-main1 .p3{
+        top: 10rem;
+        left: 0.3rem;
+    }
+
+    .sub-main2{
+        left: -1.51rem;
+        top: 11.5rem;
+    }
+
+    .sub-main2 .p2{
+        left: 0rem;
+        top: 5rem;
+    }
+
+    .sub-main2 .p3{
+        left: 1rem;
+        top: 10rem;
+    }
+
     .image{
-        display: none;
+        width: 100%;
+        height: 15rem;
+        border-bottom-right-radius: 0;
+        border-top-left-radius: 1rem;
+    }
+
+    .overlay{
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 1rem;
+        border-top-left-radius: 1rem;
     }
  }
