--- a/stats.css
+++ b/stats.css
@@ -181,3 +181,149 @@ h1{
         border-top-left-radius: 1rem;
     }
  }
+
+ @media (min-width: 375px) and (max-width: 424px){
+    body{
+        height: 57rem;
+    }
+
+    #main{
+        border-radius: 1rem;
+        width: 90%;
+        height: 55rem;
+        margin: 10% 4% 0 5%;
+    }
+
+    h1{
+        font-size: 1.7rem;
+        width: 70%;
+        top: 22rem;
+        left: 3.4rem;
+        text-align: center;
+    }
+
+    .p-0{
+        font-size: 0.9rem;
+        text-align: center;
+        width: 85%;
+        top: 30rem;
+        left: 2rem;
+    }
+
+    .sub-main1{
+        font-size: 1.3rem;
+        left: 3rem;
+        top: 10rem;
+    }
+
+    .sub-main1 .p2{
+        top: 5rem;
+        left: 0.5rem;
+    }
+
+    .sub-main1 .p3{
+        top: 10rem;
+        left: 0.3rem;
+    }
+
+    .sub-main2{
+        left: -1.51rem;
+        top: 11.5rem;
+    }
+
+    .sub-main2 .p2{
+        left: 0rem;
+        top: 5rem;
+    }
+
+    .sub-main2 .p3{
+        left: 1rem;
+        top: 10rem;
+    }
+
+    .image{
+        width: 100%;
+        height: 20rem;
+        border-bottom-right-radius: 0;
+        border-top-left-radius: 1rem;
+    }
+
+    .overlay{
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 1rem;
+        border-top-left-radius: 1rem;
+    }
+ }
+
+ @media (min-width: 425px) and (max-width: 500px){
+    body{
+        height: 62rem;
+    }
+
+    #main{
+        border-radius: 1rem;
+        width: 90%;
+        height: 60rem;
+        margin: 10% 4% 0 5%;
+    }
+
+    h1{
+        font-size: 1.7rem;
+        width: 60%;
+        top: 27rem;
+        left: 5rem;
+        text-align: center;
+    }
+
+    .p-0{
+        font-size: 0.9rem;
+        text-align: center;
+        width: 80%;
+        top: 35rem;
+        left: 2.5rem;
+    }
+
+    .sub-main1{
+        font-size: 1.3rem;
+        left: 3rem;
+        top: 15rem;
+    }
+
+    .sub-main1 .p2{
+        top: 5rem;
+        left: 0.5rem;
+    }
+
+    .sub-main1 .p3{
+        top: 10rem;
+        left: 0.3rem;
+    }
+
+    .sub-main2{
+        left: -1.51rem;
+        top: 16.5rem;
+    }
+
+    .sub-main2 .p2{
+        left: 0rem;
+        top: 5rem;
+    }
+
+    .sub-main2 .p3{
+        left: 1rem;
+        top: 10rem;
+    }
+
+    .image{
+        width: 100%;
+        height: 25rem;
+        border-bottom-right-radius: 0;
+        border-top-left-radius: 1rem;
+    }
+
+    .overlay{
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 1rem;
+        border-top-left-radius: 1rem;
+    }
+ }
